--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="container">
     <h1>📅 1-2 월간 일정표</h1>
     <button id="dark-mode-toggle">🌙 야간 모드</button>
+    <button id="refresh-btn">🔄 새로고침</button>
 
     <!-- 달력 영역 -->
     <div id="calendar-page">
